--- a/testdist/style.css
+++ b/testdist/style.css
@@ -1,16 +1,1 @@
-
-h5 {
-    color: #666;
-}
-
-
-
-
-
-
-    .test {
-        font-size: 48px;
-        color: #666;
-    }
-
-
+h5{color:#666}.test{font-size:48px;color:#666}
